--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand ms-5 fst-italic fw-bolder h1">Astrople Technologies</a>
+          <a class="navbar-brand ms-md-5 fst-italic fw-bolder h1">Astrople Technologies</a>
           <form class="d-flex input-group w-auto">
             <input
               type="search"
@@ -26,8 +26,8 @@
           </form>
         </div>
       </nav>
-    <section class="vh-100">
-        <div class="container py-5 h-100">
+    <section>
+        <div class="container py-2 h-100">
           <div class="row d-flex align-items-center justify-content-center h-100">
             <div class="col-md-8 col-lg-7 col-xl-6">
               <img src="./images/draw2.svg" class="img-fluid" alt="Phone image">
@@ -40,7 +40,7 @@
                     <label class="form-label fw-bold" for="form1">Email Address</label>
                     <div class="input-group form-floating">
                         <span class="input-group-text" id = "mail"><i class="fa-regular fa-envelope"></i></span>
-                        <input type="email" id="form1" class="form-control form-control-lg rounded-end" aria-describedby="mail" placeholder="name@example.com"/>
+                        <input type="email" id="form1" class="form-control form-control-lg rounded-end" aria-describedby="mail" placeholder="name@example.com" required/>
                         <label for="form1" class="ms-5">Enter Email Address</label>
                     </div>
                     
@@ -110,7 +110,8 @@
           </div>
         </div>
       </section>
-      <footer class="bg-dark text-center text-white mt-4">
+      <section >
+      <footer class="bg-dark text-center text-white mt-4 d-block">
        <p class="pt-2 text-center text-white fw-bold">Contact us</p>
         <!-- Grid container -->
         <div class="container p-3 pb-0">
@@ -156,6 +157,7 @@
         </div>
         <!-- Copyright -->
       </footer>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
